# cmake-starter-repo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gtests/: CMakeLists.txt  hello_gtest.cpp
libs/: CMakeLists.txt  hellolib.cpp  hellolib.h
src/: CMakeLists.txt  main.cpp
